--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,4 +1,3 @@
-
 FROM python:3.7-alpine
 
 WORKDIR /usr/src/app
@@ -7,6 +6,8 @@ COPY . .
 
 RUN pip install mysql-connector-python
 RUN pip install Flask
+RUN pip install requests
+RUN pip install flask-sock
 
 EXPOSE 5555
 
